tests/errors/sem.expected-expression.call-arg.or
main :: () -> void {
    add :: (a: int, b := 2) -> int {
        return b;
    };

    add(,);
};
